--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "nestjs-test",
-  "version": "0.0.1",
+  "name": "nestjs-demo",
+  "version": "1.0.0",
   "description": "",
   "author": "",
   "private": true,
