--- a/package.json
+++ b/package.json
@@ -13,46 +13,36 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.4.1",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/schedule": "^0.3.1",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.12.2",
+    "@nestjs/axios": "^0.0.7",
+    "@nestjs/common": "^8.4.0",
+    "@nestjs/config": "^1.2.0",
+    "@nestjs/core": "^8.4.1",
+    "@nestjs/platform-express": "^8.4.1",
+    "@nestjs/schedule": "^1.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.4"
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
-    "@nestjs/cli": "^7.0.0",
-    "@nestjs/schematics": "^7.0.0",
-    "@nestjs/testing": "^7.0.0",
+    "@nestjs/cli": "^8.2.3",
+    "@nestjs/schematics": "^8.0.0",
     "@types/express": "^4.17.3",
-    "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "@types/node": "^16.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "eslint": "^8.11.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.25.1",
+    "prettier": "^2.6.0",
+    "ts-loader": "^9.2.0",
+    "ts-node": "^10.7.0",
+    "tsconfig-paths": "^3.14.0",
+    "typescript": "^4.6.2"
   },
   "jest": {
     "moduleFileExtensions": [
