--- a/package.json
+++ b/package.json
@@ -16,32 +16,33 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
-    "@nestjs/axios": "^0.0.7",
-    "@nestjs/common": "^8.4.0",
-    "@nestjs/config": "^1.2.0",
-    "@nestjs/core": "^8.4.1",
-    "@nestjs/platform-express": "^8.4.1",
-    "@nestjs/schedule": "^1.0.2",
+    "@nestjs/axios": "^2.0.0",
+    "@nestjs/common": "^9.3.12",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.12",
+    "@nestjs/platform-express": "^9.3.12",
+    "@nestjs/schedule": "^2.2.0",
+    "axios": "^1.3.4",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.13.2",
+    "class-validator": "^0.14.0",
     "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^7.5.5"
+    "rimraf": "^4.4.1",
+    "rxjs": "^7.8.0"
   },
   "devDependencies": {
-    "@nestjs/cli": "^8.2.3",
-    "@nestjs/schematics": "^8.0.0",
-    "@types/express": "^4.17.3",
-    "@types/node": "^16.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.15.0",
-    "@typescript-eslint/parser": "^5.15.0",
-    "eslint": "^8.11.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.25.1",
-    "prettier": "^2.6.0",
-    "ts-loader": "^9.2.0",
-    "ts-node": "^10.7.0",
-    "tsconfig-paths": "^3.14.0",
+    "@nestjs/cli": "^9.3.0",
+    "@nestjs/schematics": "^9.1.0",
+    "@types/express": "^4.17.17",
+    "@types/node": "^16",
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-import": "^2.27.5",
+    "prettier": "^2.8.7",
+    "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^4.6.2"
   },
   "jest": {
